@@ -3,6 +3,7 @@ v 7.5.0
   - Add time zone configuration on gitlab.yml (Sullivan Senechal)
   - Fix LDAP authentication for Git HTTP access
   - Fix LDAP config lookup for provider 'ldap'
+  - Add Atlassian Bamboo CI service (Drew Blessing)
 
 v 7.4.2
   - Fix internal snippet exposing for unauthenticated users
